--- a/learnmore.html
+++ b/learnmore.html
@@ -30,7 +30,7 @@ The NCPSN</a>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li class="active"><a href="#">Learn More</a></li>
         <li><a href="#">Resources</a></li>
         <li><a href="#">Contact Us</a></li>
