--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@ The NCPSN</a>
     </div>
     <div class="col-lg-6">
       <h2>Our Mission</h2>
-      <p>To raise awareness of Chronic pancreatitis through education, to change how patients with chronic pancreatitis are treated by the medical community and to provide support to those struggling to get medical help or medication.</p>
+      <p>To raise awareness of c
+        
+        
+        hronic pancreatitis through education, to change how patients with chronic pancreatitis are treated by the medical community and to provide support to those struggling to get medical help or medication.</p>
       <p><a href="#">Learn More</a></p>
     </div>
   </div>
